--- a/TP03MainProj/Views/Home/Index.cshtml
+++ b/TP03MainProj/Views/Home/Index.cshtml
@@ -15,20 +15,21 @@
                     <div class="swiper-wrapper">
                         <!-- Slides -->
                         <div class="swiper-slide" data-jarallax-element="150">
-                            <div class="swiper-inner" data-bgimage="@Url.Content("~/Content/Customer/images/slider/1.webp")">
+                            <div class="swiper-inner">
+                                <img src="@Url.Content("~/Content/Customer/images/slider/4.jpg")" alt="Slide Image" style="width: 100%; height: auto;">
                                 <div class="sw-caption">
                                     <div class="container">
                                         <div class="row gx-5 align-items-center">
                                             <div class="col-lg-8 mb-sm-20">
-                                                <div class="subtitle s2 mb-4">Trusted IT Solutions</div>
-                                                <h1 class="slider-title">who <span class="underline">we</span> are</h1>
+                                                <div class="subtitle s2 mb-4">Embracing Diversity</div>
+                                                <h1 class="slider-title">Explore <span class="underline">East Asian</span> Culture</h1>
+
                                             </div>
                                             <div class="col-lg-6">
-                                                <p class="slider-teaser">We are team of tech enthusiasts dedicated to taking your technology aspirations to new heights.</p>
+                                                <p class="slider-teaser">Dive into the rich history, arts, and traditions of East Asia and experience its unique charm.</p>
                                                 <hr class="s2">
                                                 <div class="spacer-10"></div>
-                                                <a class="btn-main mb10" href="services.html">Our Services</a>&nbsp;
-                                                <a class="btn-line mb10" href="contact.html">Free Consultation</a>
+                                                <a class="btn-main mb10" href="services.html">Explore Culture</a>&nbsp;
                                             </div>
                                         </div>
                                     </div>
@@ -39,20 +40,45 @@
 
                         <!-- Slides -->
                         <div class="swiper-slide" data-jarallax-element="150">
-                            <div class="swiper-inner" data-bgimage="@Url.Content("~/Content/Customer/images/slider/2.webp")">
+                            <div class="swiper-inner">
+                                <img src="@Url.Content("~/Content/Customer/images/slider/2.jpg")" alt="Slide Image" style="width: 100%; height: auto;">
                                 <div class="sw-caption">
                                     <div class="container">
                                         <div class="row gx-5 align-items-center">
                                             <div class="col-lg-8 mb-sm-20">
-                                                <div class="subtitle s2 mb-4">Trusted IT Solutions</div>
-                                                <h1 class="slider-title">what we <span class="underline">do</span></h1>
+                                                <div class="subtitle s2 mb-4">Celebrating Traditions</div>
+                                                <h1 class="slider-title">Our Stories</h1>
                                             </div>
                                             <div class="col-lg-6">
-                                                <p class="slider-teaser">We are driven by innovation, excellence, and a commitment to delivering cutting-edge IT solutions.</p>
+                                                <p class="slider-teaser">Hear the stories of East Asian immigrants who have made their mark in Melbourne, adding color and diversity to our city.</p>
                                                 <hr class="s2">
                                                 <div class="spacer-10"></div>
-                                                <a class="btn-main mb10" href="services.html">Our Services</a>&nbsp;
-                                                <a class="btn-line mb10" href="contact.html">Free Consultation</a>
+                                                <a class="btn-main mb10" href="services.html">Join Festivities</a>&nbsp;
+                                                @*<a class="btn-line mb10" href="contact.html">Free Consultation</a>*@
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="sw-overlay s2"></div>
+                            </div>
+                        </div>
+                        <!-- Slides -->
+                        <div class="swiper-slide" data-jarallax-element="150">
+                            <div class="swiper-inner">
+                                <img src="@Url.Content("~/Content/Customer/images/slider/3.jpg")" alt="Slide Image" style="width: 100%; height: auto;">
+                                <div class="sw-caption">
+                                    <div class="container">
+                                        <div class="row gx-5 align-items-center">
+                                            <div class="col-lg-8 mb-sm-20">
+                                                <div class="subtitle s2 mb-4">Preserving Heritage</div>
+                                                <h1 class="slider-title">Building an Inclusive Community</h1>
+                                            </div>
+                                            <div class="col-lg-6">
+                                                <p class="slider-teaser">Learn how to recognize and oppose discrimination, striving together to create a more inclusive and understanding environment for East Asian immigrants.</p>
+                                                <hr class="s2">
+                                                <div class="spacer-10"></div>
+                                                <a class="btn-main mb10" href="services.html">Support Culture</a>&nbsp;
+                                                @*<a class="btn-line mb10" href="contact.html">Free Consultation</a>*@
                                             </div>
                                         </div>
                                     </div>
@@ -76,43 +102,43 @@
             </div>
         </section>
 
-        <section class="no-top">
+        <section class="no-top" id="epics">
             <div class="container">
                 <div class="row g-4 mt-100 sm-mt-0 z-1000">
                     <div class="spacer-single d-lg-none d-sm-block"></div>
                     <div class="col-lg-3 col-md-6">
                         <div>
-                            <img src="@Url.Content("~/Content/Customer/images/services/1.webp")" class="img-fullwidth rounded-20 mb20" alt="">
-                            <h4>Custom Software</h4>
+                            <img src="@Url.Content("~/Content/Customer/images/services/11.webp")" class="img-fullwidth rounded-20 mb20" alt="">
+                            <h4>East Asian Melodies</h4>
                             <hr class="s2">
-                            <p>Provide management and maintenance of IT infrastructure, including servers, networks, and software.</p>
+                            <p>Experience the vibrant celebrations of East Asian cultures right here in Melbourne. Join us in festivals that tell tales of heritage and unity, connecting the East with the West.</p>
                         </div>
                     </div>
 
                     <div class="col-lg-3 col-md-6">
                         <div>
-                            <img src="@Url.Content("~/Content/Customer/images/services/2.webp")" class="img-fullwidth rounded-20 mb20" alt="">
-                            <h4>Web Application</h4>
+                            <img src="@Url.Content("~/Content/Customer/images/services/22.webp")" class="img-fullwidth rounded-20 mb20" alt="">
+                            <h4>Discover East Asia</h4>
                             <hr class="s2">
-                            <p>Creating and maintaining functional and efficient software applications that address a multitude of tasks.</p>
+                            <p>Dive into the rich history and traditions of East Asia through educational workshops and events. Gain insights, understand values, and break down cultural barriers.</p>
                         </div>
                     </div>
 
                     <div class="col-lg-3 col-md-6">
                         <div>
-                            <img src="@Url.Content("~/Content/Customer/images/services/3.webp")" class="img-fullwidth rounded-20 mb20" alt="">
-                            <h4>Mobile App</h4>
+                            <img src="@Url.Content("~/Content/Customer/images/services/33.webp")" class="img-fullwidth rounded-20 mb20" alt="">
+                            <h4>Voices of East Asia</h4>
                             <hr class="s2">
-                            <p>Protecting digital assets by providing services like firewall management and vulnerability assessments.</p>
+                            <p>Listen to the authentic stories of East Asian immigrants in Melbourne. This anonymous space allows for the sharing of personal journeys, cultural memories, and the creation of a shared understanding.</p>
                         </div>
                     </div>
 
                     <div class="col-lg-3 col-md-6">
                         <div>
-                            <img src="@Url.Content("~/Content/Customer/images/services/4.webp")" class="img-fullwidth rounded-20 mb20" alt="">
-                            <h4>Full-Stack</h4>
+                            <img src="@Url.Content("~/Content/Customer/images/services/44.webp")" class="img-fullwidth rounded-20 mb20" alt="">
+                            <h4>Cultural Insights              </h4>
                             <hr class="s2">
-                            <p>Designing, implementing, and managing databases, including SQL and NoSQL databases.</p>
+                            <p>Explore data-driven insights into the lives of East Asian communities in Melbourne. Understand the patterns, challenges, and successes of integration, aiming for a society free from discrimination.</p>
                         </div>
                     </div>
                 </div>
@@ -136,17 +162,16 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8">
-                        <div class="subtitle s2 wow fadeInUp mb-3">Our team</div>
-                        <h2 class="wow fadeInUp" data-wow-delay=".2s">We're a group of IT passionate</h2>
+                        <div class="subtitle s2 wow fadeInUp mb-3">Cultures</div>
+                        <h2 class="wow fadeInUp" data-wow-delay=".2s">Cultures</h2>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-3 col-md-6 text-center mb-sm-20">
-                        <div class="bg-color-2 rounded-30 mb20">
-                            <img src="@Url.Content("~/Content/Customer/images/team/1.webp")" class="img-fluid" alt="">
+                    <div class="col-lg-3 col-md-6 text-center mb-sm-20 ">
+                        <div class="bg-color-2 rounded-30 mb20 bg-warning">
+                            <img src="@Url.Content("~/Content/Customer/images/team/1.jpg")" class="img-fluid" alt="">
                         </div>
-                        <h4 class="mb-0">Fynley Wilkinson</h4>
-                        <div>CEO</div>
+                        <h4 class="mb-0">China</h4>
                         <div class="social-icons s2">
                             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                             <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -155,11 +180,10 @@
                     </div>
 
                     <div class="col-lg-3 col-md-6 text-center mb-sm-20">
-                        <div class="bg-color-2 rounded-30 mb20">
-                            <img src="@Url.Content("~/Content/Customer/images/team/2.webp")" class="img-fluid" alt="">
+                        <div class="bg-color-2 rounded-30 mb20 bg-warning">
+                            <img src="@Url.Content("~/Content/Customer/images/team/2.jpg")" class="img-fluid" alt="">
                         </div>
-                        <h4 class="mb-0">Myra Welsh</h4>
-                        <div>CEO</div>
+                        <h4 class="mb-0">Japan</h4>
                         <div class="social-icons s2">
                             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                             <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -168,11 +192,10 @@
                     </div>
 
                     <div class="col-lg-3 col-md-6 text-center mb-sm-20">
-                        <div class="bg-color-2 rounded-30 mb20">
-                            <img src="@Url.Content("~/Content/Customer/images/team/3.webp")" class="img-fluid" alt="">
+                        <div class="bg-color-2 rounded-30 mb20 bg-warning">
+                            <img src="@Url.Content("~/Content/Customer/images/team/3.jpg")" class="img-fluid" alt="">
                         </div>
-                        <h4 class="mb-0">Aysha Shepard</h4>
-                        <div>CCO</div>
+                        <h4 class="mb-0">Mongolia</h4>
                         <div class="social-icons s2">
                             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                             <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -181,11 +204,10 @@
                     </div>
 
                     <div class="col-lg-3 col-md-6 text-center mb-sm-20">
-                        <div class="bg-color-2 rounded-30 mb20">
-                            <img src="@Url.Content("~/Content/Customer/images/team/4.webp")" class="img-fluid" alt="">
+                        <div class="bg-color-2 rounded-30 mb20 bg-warning">
+                            <img src="@Url.Content("~/Content/Customer/images/team/4.jpg")" class="img-fluid" alt="">
                         </div>
-                        <h4 class="mb-0">Robyn Peel</h4>
-                        <div>CTO</div>
+                        <h4 class="mb-0">Korea</h4>
                         <div class="social-icons s2">
                             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                             <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -394,7 +416,7 @@
         </section>
 
 
-        <section class="pt60 pb60">
+        @*<section class="pt60 pb60">
             <div class="container">
                 <div class="row g-4">
                     <div class="col-md-12">
@@ -411,7 +433,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>*@
 
     </div>
     <!-- content close -->
