--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -2,7 +2,6 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Cultural Events</h2>
@@ -14,7 +13,7 @@
     -->
 
 <div id="calendar"></div>
-<div style="display: none">
+<div >
     <table class="table">
         <tr>
             <!--<th>
@@ -64,5 +63,4 @@
     </table>
 </div>
 @section Scripts {
-    @Scripts.Render("~/bundles/fullcalendar")
 }
