Modified the Events Database and Model

--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -14,7 +14,7 @@
     -->
 
 <div id="calendar"></div>
-<div style="display: none">
+<div>
     <table class="table">
         <tr>
             <!--<th>
