--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -12,8 +12,8 @@
 </p>
     -->
 
-<div id="calendar"></div>
-<div >
+<div id="calendar" class=""></div>
+<div>
     <table class="table">
         <tr>
             <!--<th>
@@ -40,16 +40,16 @@
                 <!--<td>
                     Html.DisplayFor(modelItem => item.CalenderDate.Name)
                 </td>-->
-                <td class = "title">
+                <td class="title">
                     @Html.DisplayFor(modelItem => item.Title)
                 </td>
-                <td class = "description">
+                <td class="description">
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
-                <td class = "starttime">
+                <td class="starttime">
                     @Html.DisplayFor(modelItem => item.StartTime)
                 </td>
-                <td class = "endtime">
+                <td class="endtime">
                     @Html.DisplayFor(modelItem => item.EndTime)
                 </td>
                 <td>
@@ -63,4 +63,6 @@
     </table>
 </div>
 @section Scripts {
+    @Scripts.Render("~/bundles/fullcalendar")
+  
 }
