--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -12,7 +12,6 @@
 </p>
     -->
 
-<div id="calendar" class=""></div>
 <div>
     <table class="table">
         <tr>
@@ -40,16 +39,16 @@
                 <!--<td>
                     Html.DisplayFor(modelItem => item.CalenderDate.Name)
                 </td>-->
-                <td class = "title">
+                <td class="title">
                     @Html.DisplayFor(modelItem => item.Title)
                 </td>
-                <td class = "description">
+                <td class="description">
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
-                <td class = "starttime">
+                <td class="starttime">
                     @Html.DisplayFor(modelItem => item.StartTime)
                 </td>
-                <td class = "endtime">
+                <td class="endtime">
                     @Html.DisplayFor(modelItem => item.EndTime)
                 </td>
                 <td>
@@ -62,7 +61,26 @@
 
     </table>
 </div>
+
+<div id="calendar" class=""></div>
+
+
 @section Scripts {
+    <!-- The Full Calender Scripts-->
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.js"></script>
+    <style>
+        body {
+            margin: 40px 10px;
+            padding: 0;
+            font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+            font-size: 14px;
+        }
+        #calendar {
+            max-width: 1100px;
+            margin: 0 auto;
+        }
+    </style>
+
     @Scripts.Render("~/bundles/fullcalendar")
 
-}
+    }
