--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -16,8 +16,11 @@
     <table class="table">
         <tr>
             <!--<th>
-                Html.DisplayNameFor(model => model.CalenderDate.Name)
-            </th>-->
+    Html.DisplayNameFor(model => model.CalenderDate.Name)
+    </th>-->
+            <th>
+                @Html.DisplayNameFor(model => model.Culture)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
@@ -25,10 +28,13 @@
                 @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.StartTime)
+                @Html.DisplayNameFor(model => model.StartDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.EndTime)
+                @Html.DisplayNameFor(model => model.EndDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Url)
             </th>
             <th></th>
         </tr>
@@ -37,8 +43,11 @@
         {
             <tr class="events">
                 <!--<td>
-                    Html.DisplayFor(modelItem => item.CalenderDate.Name)
-                </td>-->
+    Html.DisplayFor(modelItem => item.CalenderDate.Name)
+    </td>-->
+                <td class="title">
+                    @Html.DisplayFor(modelItem => item.Culture)
+                </td>
                 <td class="title">
                     @Html.DisplayFor(modelItem => item.Title)
                 </td>
@@ -46,10 +55,13 @@
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
                 <td class="starttime">
-                    @Html.DisplayFor(modelItem => item.StartTime)
+                    @Html.DisplayFor(modelItem => item.StartDate)
                 </td>
                 <td class="endtime">
-                    @Html.DisplayFor(modelItem => item.EndTime)
+                    @Html.DisplayFor(modelItem => item.EndDate)
+                </td>
+                <td class="url">
+                    @Html.DisplayFor(modelItem => item.Url)
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
@@ -62,101 +74,20 @@
     </table>
 </div>
 
-<div id="calendar" class=""></div>
-
+<div id="calendar"></div>
+<div id="events-list"></div>
 
 @section Scripts {
-    <!-- The Full Calender Scripts-->
+    <script src="~/Scripts/fullcalendar.js"></script>
+    <script src="~/Scripts/jquery-3.7.1.js"></script>
+    <script src="~/Scripts/moment.js"></script>
+    <!-- The Custom Calender Script-->
+    <script src="~/Scripts/calendar.js"></script>
+    <!-- Global Variables for passing data to custom calender script -->
     <script>
-
-        document.addEventListener('DOMContentLoaded', function () {
-            var calendarEl = document.getElementById('calendar');
-
-            var calendar = new FullCalendar.Calendar(calendarEl, {
-                headerToolbar: {
-                    left: 'prevYear,prev,next,nextYear today',
-                    center: 'title',
-                    right: 'dayGridMonth,dayGridWeek,dayGridDay'
-                },
-                initialDate: '2023-01-12',
-                navLinks: true, // can click day/week names to navigate views
-                editable: true,
-                dayMaxEvents: true, // allow "more" link when too many events
-                events: [
-                    {
-                        title: 'All Day Event',
-                        start: '2023-01-01'
-                    },
-                    {
-                        title: 'Long Event',
-                        start: '2023-01-07',
-                        end: '2023-01-10'
-                    },
-                    {
-                        groupId: 999,
-                        title: 'Repeating Event',
-                        start: '2023-01-09T16:00:00'
-                    },
-                    {
-                        groupId: 999,
-                        title: 'Repeating Event',
-                        start: '2023-01-16T16:00:00'
-                    },
-                    {
-                        title: 'Conference',
-                        start: '2023-01-11',
-                        end: '2023-01-13'
-                    },
-                    {
-                        title: 'Meeting',
-                        start: '2023-01-12T10:30:00',
-                        end: '2023-01-12T12:30:00'
-                    },
-                    {
-                        title: 'Lunch',
-                        start: '2023-01-12T12:00:00'
-                    },
-                    {
-                        title: 'Meeting',
-                        start: '2023-01-12T14:30:00'
-                    },
-                    {
-                        title: 'Happy Hour',
-                        start: '2023-01-12T17:30:00'
-                    },
-                    {
-                        title: 'Dinner',
-                        start: '2023-01-12T20:00:00'
-                    },
-                    {
-                        title: 'Birthday Party',
-                        start: '2023-01-13T07:00:00'
-                    },
-                    {
-                        title: 'Click for Google',
-                        url: 'http://google.com/',
-                        start: '2023-01-28'
-                    }
-                ]
-            });
-
-            calendar.render();
-        });
-
+        var getCulturalDatesUrl = '@Url.Action("GetCulturalDates", "Events")';
+        var getEventsFromEventbriteUrl = '@Url.Action("GetEventsFromEventbrite", "Events")';
     </script>
-    <style>
-        body {
-            margin: 40px 10px;
-            padding: 0;
-            font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-            font-size: 14px;
-        }
-        #calendar {
-            max-width: 1100px;
-            margin: 0 auto;
-        }
-    </style>
 
-    @Scripts.Render("~/bundles/fullcalendar")
 
-    }
+}
