--- a/TP03MainProj/Views/Shared/_Layout.cshtml
+++ b/TP03MainProj/Views/Shared/_Layout.cshtml
@@ -45,11 +45,11 @@
                                         </ul>
                                     </li>
                                     <li class=" text-white">
-                                        <a class="menu-item" href="#">Study Case</a>
-                                        <ul>
+                                        <a class="menu-item" href="@Url.Action("Index", "Education")">Culture Education</a>
+                                        @*<ul>
                                             <li><a class="menu-item" href="@Url.Action("StudyCase", "Cases")">Study Case</a></li>
                                             <li><a class="menu-item" href="@Url.Action("SingleStudyCase", "Cases")">Single Study Case</a></li>
-                                        </ul>
+                                        </ul>*@
                                     </li>
                                     <li class=" text-white"><a class="menu-item" href="@Url.Action("Services", "Home")">Services</a></li>
                                     <li class=" text-white"><a class="menu-item" href="@Url.Action("About", "Home")">About Us</a></li>
